--- a/monitoring/prometheus/prometheus.yml
+++ b/monitoring/prometheus/prometheus.yml
@@ -9,13 +9,32 @@ scrape_configs:
 
   - job_name: 'backend'
     metrics_path: '/metrics'
-    static_configs:
-      - targets: ['backend:8000']
+    kubernetes_sd_configs:
+      - role: endpoints
+    relabel_configs:
+      - source_labels: [__meta_kubernetes_service_label_app]
+        regex: backend
+        action: keep
 
-  - job_name: 'redis'
-    static_configs:
-      - targets: ['redis-exporter:9121']
+  - job_name: 'redis-exporter'
+    kubernetes_sd_configs:
+      - role: endpoints
+    relabel_configs:
+      - source_labels: [__meta_kubernetes_service_label_app]
+        regex: redis
+        action: keep
+      - source_labels: [__meta_kubernetes_endpoint_port_name]
+        regex: metrics;?;
+        action: keep
 
-  - job_name: 'postgres'
+  - job_name: 'postgres-exporter'
+    kubernetes_sd_configs:
+      - role: endpoints
+    relabel_configs:
+      - source_labels: [__meta_kubernetes_service_label_app]
+        regex: postgres
+        action: keep
+
+  - job_name: 'static-local'
     static_configs:
-      - targets: ['postgres-exporter:9187'] 
+      - targets: ['backend:8000','redis-exporter:9121','postgres-exporter:9187']
