--- a/kubernetes/backend-deployment.yaml
+++ b/kubernetes/backend-deployment.yaml
@@ -14,12 +14,35 @@ spec:
     spec:
       containers:
       - name: backend
-        image: cloud-blog-backend:latest
+        image: cloud-blog-backend:0.1.0
         imagePullPolicy: IfNotPresent
-        env:
-        - name: DATABASE_URL
-          value: "postgresql://postgres:postgres@postgres:5432/postgres"
-        - name: REDIS_URL
-          value: "redis://redis:6379/0"
+        envFrom:
+        - secretRef:
+            name: backend-secrets
+        - configMapRef:
+            name: backend-config
         ports:
         - containerPort: 8000
+        resources:
+          requests:
+            cpu: "100m"
+            memory: "128Mi"
+          limits:
+            cpu: "500m"
+            memory: "512Mi"
+        readinessProbe:
+          httpGet:
+            path: /health
+            port: 8000
+          initialDelaySeconds: 5
+          periodSeconds: 10
+        livenessProbe:
+          httpGet:
+            path: /health
+            port: 8000
+          initialDelaySeconds: 30
+          timeoutSeconds: 5
+        securityContext:
+          runAsNonRoot: true
+          runAsUser: 1000
+          allowPrivilegeEscalation: false
