--- a/kubernetes/frontend-deployment.yaml
+++ b/kubernetes/frontend-deployment.yaml
@@ -14,10 +14,32 @@ spec:
     spec:
       containers:
       - name: frontend
-        image: cloud-blog-frontend:latest
+        image: cloud-blog-frontend:0.1.0
         imagePullPolicy: IfNotPresent
-        env:
-        - name: NEXT_PUBLIC_API_URL
-          value: "http://backend:8000"
+        envFrom:
+        - configMapRef:
+            name: frontend-config
         ports:
         - containerPort: 3000
+        resources:
+          requests:
+            cpu: "50m"
+            memory: "64Mi"
+          limits:
+            cpu: "250m"
+            memory: "256Mi"
+        readinessProbe:
+          httpGet:
+            path: /_next/static/
+            port: 3000
+          initialDelaySeconds: 5
+          periodSeconds: 10
+        livenessProbe:
+          httpGet:
+            path: /_next/static/
+            port: 3000
+          initialDelaySeconds: 30
+          timeoutSeconds: 5
+        securityContext:
+          runAsNonRoot: true
+          runAsUser: 1000
