--- a/kubernetes/ingress.yaml
+++ b/kubernetes/ingress.yaml
@@ -2,20 +2,18 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: blog-ingress
-  annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
   rules:
   - http:
       paths:
-      - path: /api/(.*)
+      - path: /api/
         pathType: Prefix
         backend:
           service:
             name: backend
             port:
               number: 8000
-      - path: /(.*)
+      - path: /
         pathType: Prefix
         backend:
           service:
