--- a/kubernetes/postgres-deployment.yaml
+++ b/kubernetes/postgres-deployment.yaml
@@ -14,19 +14,21 @@ spec:
     spec:
       containers:
       - name: postgres
-        image: postgres:13
-        env:
-        - name: POSTGRES_USER
-          value: "postgres"
-        - name: POSTGRES_PASSWORD
-          value: "postgres"
-        - name: POSTGRES_DB
-          value: "postgres"
+        image: postgres:13-alpine
+        envFrom:
+        - secretRef:
+            name: postgres-secrets
+        - configMapRef:
+            name: postgres-config
         ports:
         - containerPort: 5432
         volumeMounts:
         - name: postgres-data
           mountPath: /var/lib/postgresql/data
+      securityContext:
+        runAsUser: 999
+        fsGroup: 999
       volumes:
       - name: postgres-data
-        emptyDir: {}
+        persistentVolumeClaim:
+          claimName: postgres-pvc
